syntax = "proto3";
package pb;


service UserService {
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
}

//OBJECTS
message CellarUser {
    string Id = 1;
    string Name = 2;
    string State = 3;
    string Image = 4;
    string Role = 5;
}


message GetAllUsersRequest {
}

message GetAllUsersResponse {
    repeated CellarUser Data = 1;
}
